--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@iconify/icons-mdi-light": "^1.0.3",
+    "@iconify/react": "^1.1.2",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
